--- a/src/pages/Onboarding/Onboarding.css
+++ b/src/pages/Onboarding/Onboarding.css
@@ -1,6 +1,10 @@
 ion-content {
-    --padding-bottom: 0;
-    --padding-end: 0;
-    --padding-start: 0;
-    --padding-top: 0;
+  --padding-bottom: 0;
+  --padding-end: 0;
+  --padding-start: 0;
+  --padding-top: 0;
+}
+
+.icon {
+  color: white;
 }
